--- a/index.html
+++ b/index.html
@@ -1,7 +1,26 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<link data-trunk rel="rust" data-wasm-opt="z"/>
-	</head>
-	<body></body>
+<style>
+    * {
+        margin: 0;
+        padding: 0;
+    }
+
+    html {
+        background-color: black;
+    }
+
+    .clear-button {
+        background-color: red;
+        color: blue($color: #000000);
+    }
+</style>
+
+<head>
+    <link data-trunk rel="rust" data-wasm-opt="z" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+</head>
+
+<body></body>
+
 </html>
